# caps-lock-me

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: config.toml
src/: key_enums.rs  key_func.rs  lib.rs  main.rs  win_func.rs
src/config/: config_mgr.rs  mod.rs
