[package]
name = "caps-lock-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
once_cell = "1.9.0"
num_enum = "0.5.7"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.113"
input = "0.7.1"
nix = "0.24.1"
x11 = { version = "2.19.1", features = ["xlib", "xtest"] }
uinput = { version = "0.1.3", default-features = false }